--- a/app/views/employee_attendance/employee_view_all.haml
+++ b/app/views/employee_attendance/employee_view_all.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("  HR/show_hr.png")
   %h1= t('view_all')
@@ -30,7 +31,6 @@
     .text-input-bg
       = select :subject_assignment, :department_id, @departments.map { |s| [s.name, s.id] }, |
         {:prompt => "#{t('select_a_department')}"},                                          |
-        {:onChange => "#{remote_function(:url => {:action => "employees_list"},              |
-        :with => "'department_id='+value")}"}                                                |
+        {:onChange => "onChangeRequest(this, '#{url_for(action: :employees_list, department_id: 'paramid')}')"}
   .extender
   #employee_list
