--- a/app/views/employee/_one_click_payslip_date.haml
+++ b/app/views/employee/_one_click_payslip_date.haml
@@ -16,19 +16,17 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= csrf_meta_tag
 :javascript
   $jq = $.noConflict();
   $jq(document).ready(function() {
     $jq("#salary_date").datepicker({dateFormat: 'yy-mm-dd'});
   });
-- form_remote_for :one_click_payslip,
-- :update=>"message-div",
-- :before => "Element.show('loader')",
-- :success => "Element.hide('loader')",
-- :url => {:action => 'one_click_payslip_generation'} do
+= form_for(:one_click_payslip, :url => {:action => 'one_click_payslip_generation'}, :remote => true) do
   .label-field-pair
     %label{:for => "salary_date"}= t('salary_date')
-    .text-input-bg= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:default), |
+    .text-input-bg= date_select 'salary_date', I18n.l(Date.today,:format=>:default), |
         :year_range => 2.years.ago..0.years.from_now                                  |
   .extender
   #submit-button
