--- a/app/views/employee/_one_click_payslip_revert_date.haml
+++ b/app/views/employee/_one_click_payslip_revert_date.haml
@@ -16,6 +16,8 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= csrf_meta_tag
 %script{:src => "/javascripts/jquery-1.3.2.min.js", :type => "text/javascript"}
 %script{:src => "/javascripts/jquery-ui.min.js", :type => "text/javascript"}
 :javascript
@@ -23,11 +25,7 @@
   $jq(document).ready(function() {
     $jq("#salary_date").datepicker({dateFormat: 'yy-mm-dd'});
   });
-- form_remote_for :one_click_payslip,
-- :update=>"message-div",
-- :before => "Element.show('loader')",
-- :success => "Element.hide('loader')",
-- :url => {:action => 'one_click_payslip_revert'} do
+= form_for(:one_click_payslip, :url => {:action => 'one_click_payslip_revert'}, :remote => true) do
   .label-field-pair
     %label{:for => "salary_date"}= t('salary_month')
     .text-input-bg= select :one_click_payslip, :salary_date, @salary_dates.map {|c| [I18n.localize(c.salary_date, :format=>:month_year),c.salary_date.strftime("%Y-%m-%d")]}, |
