Fixes Examination-Settings

--- a/app/assets/stylesheets/grading_levels/index.css
+++ b/app/assets/stylesheets/grading_levels/index.css
@@ -28,6 +28,13 @@
     background:  #373B3F;
 }
 
+
+#modal-box{
+background: #C3D9FF;
+width: 300;
+height: auto;
+}
+
 .add_grade a {
     color:black;
     font-weight: bold;
