--- a/app/views/class_designations/_course_class_designations.html.haml
+++ b/app/views/class_designations/_course_class_designations.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= csrf_meta_tag
 #class_form
   = form_for :class_designation, url: { action: :create_class_designation , course_id: @course.id}, remote: true do |c|
     #form-content
