--- a/app/views/class_designations/_class_designations.html.haml
+++ b/app/views/class_designations/_class_designations.html.haml
@@ -26,9 +26,10 @@
           .category-marks= designation.cgpa
         - else
           .category-marks= designation.marks
-        .category-edit= link_to_remote "#{t('edit_text')}", :url=>{:controller=>"class_designations",:action=>"edit_class_designation", :id=>designation.id}  if permitted_to? :edit_class_designation, :class_designations
+        .category-edit= link_to "#{t('edit_text')}", {:controller=>"class_designations",:action=>"edit_class_designation", :id=>designation.id}, :remote => true  if permitted_to? :edit_class_designation, :class_designations
         .category-delete
-          = link_to_remote "Delete", :url=>{:controller=>"class_designations",:action=>"delete_class_designation", :id=>designation.id}, :confirm=>"Are you sure?" if permitted_to? :delete_class_designation, :class_designations
+          = link_to "#{t('delete')}", {:controller=>"class_designations",:action=>"delete_class_designation", :id=>designation.id , :remote => true} if permitted_to? :delete_class_designation, :class_designations
+
   - else
     %p.flash-msg
       = t('no_class_designations_found')
