--- a/app/views/ranking_levels/_ranking_levels.html.haml
+++ b/app/views/ranking_levels/_ranking_levels.html.haml
@@ -17,17 +17,17 @@
 - #specific language governing permissions and limitations
 - #under the License.
 %ul.category-list
-  - unless @ranking_levels.empty?
+  - unless @ranking_levels.blank?
     %li.heading= t('ranking_levels_text')
     - @ranking_levels.each_with_index do |rank,i|
       %li{:class => "list#{cycle('odd', 'even')}"}
         .category-name
           = rank.name
-          %span{:class => "category-up-down #{"inactive" if i==0}"}= link_to_remote "▲",:url=>{:action=>"change_priority",:order=>"up",:id=>rank.id}
-          %span{:class => "category-up-down #{"inactive" if i+1==@ranking_levels.count}"}= link_to_remote "▼",:url=>{:action=>"change_priority",:order=>"down",:id=>rank.id}
-        .category-edit= link_to_remote "#{t('edit_text')}", :url=>{:controller=>"ranking_levels",:action=>"edit_ranking_level", :id=>rank.id}  if permitted_to? :edit_ranking_level, :ranking_levels
+          %span{:class => "category-up-down #{"inactive" if i==0}"}= link_to "▲",{:action=>"change_priority",:order=>"up",:id=>rank.id}, :remote => true
+          %span{:class => "category-up-down #{"inactive" if i+1==@ranking_levels.count}"}= link_to "▼",{:action=>"change_priority",:order=>"down",:id=>rank.id}, :remote => true
+        .category-edit= link_to "#{t('edit_text')}", {:controller=>"ranking_levels",:action=>"edit_ranking_level", :id=>rank.id},:remote => true  if permitted_to? :edit_ranking_level, :ranking_levels
         .category-delete
-          = link_to_remote "#{t('delete')}", :url=>{:controller=>"ranking_levels",:action=>"delete_ranking_level", :id=>rank.id}, :confirm=>"#{t('delete_confirm_msg')}" if permitted_to? :delete_ranking_level, :ranking_levels
+          = link_to "#{t('delete')}", {:controller=>"ranking_levels",:action=>"delete_ranking_level", :id=>rank.id}, :confirm=>"#{t('delete_confirm_msg')}", :remote => true if permitted_to? :delete_ranking_level, :ranking_levels
   - else
     %p.flash-msg
       = t('no_ranking_level_found')
