--- a/app/views/ranking_levels/index.html.haml
+++ b/app/views/ranking_levels/index.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('ranking_levels_text')
@@ -29,9 +30,7 @@
         = t('select_a_course')
         \:
       .text-input-bg
-        = select :ranking_level, :course_id,                                                                                                                                        |
-          Course.active.map {|b| [b.full_name, b.id]},                                                                                                                              |
-          {:prompt => "#{t('select_a_course')}"},{:onChange => "#{remote_function(:url => {:action => "load_ranking_levels", course_id: "value"}, :with => "'course_id='+value")}"} |
+        = select :ranking_level, :course_id, Course.active.map {|b| [b.full_name, b.id]}, { prompt: t('select_a_course')}, { onChange: "onChangeRequest(this, '#{url_for(action: :load_ranking_levels, course_id: 'paramid')}')"}
   #flash
   #errors
     = error_messages_for 'ranking_level'
